Correzione schema relazionale

--- a/src/progettazioneConcettuale/analisi_entita.tex
+++ b/src/progettazioneConcettuale/analisi_entita.tex
@@ -226,13 +226,13 @@ Il simbolo $\Leftarrow$ identifica una generalizzazione parziale, cioè l'\textb
 \vspace{0.5cm}
 
 \begin{tabular}{P{4cm}P{2cm}P{8cm}}
-	\multicolumn{3}{c}{\textbf {\large {Eventi}}} \\
+	\multicolumn{3}{c}{\textbf {\large {Evento}}} \\
 	\toprule
 	\rowcolor[rgb]{.929, .929, .929} Attributo & Tipo & Descrizione \\
 	\midrule
 	\textbf{Titolo} & VARCHAR &  Rappresenta il titolo dell'evento\\
 	\midrule
-	\textbf{NumEdizione} & INTEGER &  Rappresenta l'edizione dell'evento\\
+	\textbf{Edizione} & INTEGER &  Rappresenta l'edizione dell'evento\\
 	\bottomrule
 \end{tabular}
 
@@ -283,7 +283,7 @@ Il simbolo $\Leftarrow$ identifica una generalizzazione parziale, cioè l'\textb
 	\toprule
 	\rowcolor[rgb]{.929, .929, .929} Attributo & Tipo & Descrizione \\
 	\midrule
-	\textbf{CodFiscale} & VARCHAR &  Rappresenta univocamente il dipendente\\
+	\textbf{CodiceFiscale} & VARCHAR &  Rappresenta univocamente il dipendente\\
 	\midrule
 	Nome & VARCHAR & Rappresenta il nome del dipendente \\
 	\midrule
@@ -302,7 +302,7 @@ Il simbolo $\Leftarrow$ identifica una generalizzazione parziale, cioè l'\textb
 	\midrule
 	Nome & VARCHAR & Rappresenta il nome commerciale del macchinario \\
 	\midrule
-	DataProManute & DATE & Rappresenta la data prossima della manutenzione \\
+	DataProssimaManutenzione & DATE & Rappresenta la data prossima della manutenzione \\
 	\bottomrule
 \end{tabular}
 
