--- a/src/progettazioneLogica/_main.tex
+++ b/src/progettazioneLogica/_main.tex
@@ -10,5 +10,5 @@
 \subsection{Scelta degli identificatori principali}
 \input{src/progettazioneLogica/identificatori_principali.tex}
 
-\subsection{Schema logico-relazionale e vincoli d'integrità referenziale}
+\subsection{Schema relazionale e vincoli d'integrità referenziale}
 \input{src/progettazioneLogica/schema_relazionale.tex}
