--- a/src/progettazioneConcettuale/analisi_relazioni.tex
+++ b/src/progettazioneConcettuale/analisi_relazioni.tex
@@ -9,21 +9,11 @@
 \end{itemize}
 
 \begin{itemize}
-	\item \underline{Vigna - TipoUva}: \textbf{Proviene}
+	\item \underline{Vigneto - TipoUva}: \textbf{Proviene}
 	
 	\begin{itemize}
-		\item La vigna contiene solo una tipologia d'uva (1,1)
-		\item Un tipo di uva può provenire da più vigne (1,N)
-	\end{itemize}
-	
-\end{itemize}
-
-\begin{itemize}
-	\item \underline{Uva - TipoUva}: \textbf{TipologiaUva}
-	
-	\begin{itemize}
-		\item Un tipo d'annata d'uva proviene da un solo tipo d'uva (1,1)
-		\item Un tipo d'uva può rappresentare uva d'annata diversa (1,N)
+		\item Un vigneto produce solamente una tipologia d'uva (1,1)
+		\item Un tipo di uva può provenire da più vigneti (1,N)
 	\end{itemize}
 	
 \end{itemize}
@@ -32,8 +22,8 @@
 	\item \underline{Uva - Vino}: \textbf{Prodotto}
 	
 	\begin{itemize}
-		\item Da un tipo d'annata d'uva possono essere prodotti o nessuno o più tipi di vino (0,N)*
-		\item Un vino è prodotto da un solo tipo d'annata d'uva (1,1)
+		\item Da un tipo di uva (di una determinata annata) possono essere stati prodotti più tipi di vino o nessun tipo di vino (0,N)*
+		\item Un vino è prodotto da un solo tipo d'uva (di una determinata annata) (1,1)
 	\end{itemize}
 	
 \end{itemize}
@@ -47,14 +37,14 @@
 	\item \underline{MateriaPrima - Fornitore}: \textbf{Fornitura}*
 	
 	\begin{itemize}
-		\item La Materia prima viene fornita da un solo tipo di fornitore (1,1)
-		\item Un fornitore  fornisce da una o più tipologie di materie prime (1,N)
+		\item Una Materia prima viene fornita da un solo fornitore (1,1)
+		\item Un fornitore fornisce una o più tipologie di materie prime (1,N)
 	\end{itemize}
 	
 \end{itemize}
 
 \begin{verse}
-*\emph{Nella relazione sono presenti gli attributi \textbf{DataAcquisto, Prezzo, Quantità} perchè una fornitura può essere richiesta più volte in data, prezzo e quantità diverse}
+*\emph{Nella relazione sono presenti gli attributi \textbf{DataAcquisto, Prezzo, Quantità} perchè una fornitura può essere effettuata più volte, con data, prezzo e quantità differenti}
 \end{verse}
 
 
@@ -62,42 +52,42 @@
 	\item \underline{BottigliaDiVino - Vino}: \textbf{TipoVino}
 	
 	\begin{itemize}
-		\item La bottiglia di vino contiene una sola tipologia di vino (1,1)
-		\item Un vino può essere contenuto in nessuna o più bottiglie di vino (0,N)*
+		\item Una bottiglia di vino contiene solamente una tipologia di vino (1,1)
+		\item Un vino può essere contenuto in più bottiglie di vino o in nessuna (0,N)*
 	\end{itemize}
 	
 \end{itemize}
 
 \begin{verse}
-	*\emph{(0,N) perchè una tipologia di vino può essere appena stato prodotto e quindi non è stato ancora imbottigliato.}
+	*\emph{(0,N) perchè una tipologia di vino può essere appena stato prodotto e quindi non è stato ancora imbottigliato, oppure possono essere terminate le bottiglie che lo contenevano.}
 \end{verse}
 
 \begin{itemize}
 	\item \underline{BottigliaDiVino - Tappo}: \textbf{TipoTappo}
 	
 	\begin{itemize}
-		\item La bottiglia di vino ha una sola tipologia di tappo (1,1)
-		\item Un tipo di tappo può appartenere a nessuna o più bottiglie di vino (0,N)*
+		\item Una bottiglia di vino ha solamente un tappo (1,1)
+		\item Un tipo di tappo può appartenere a più bottiglie di vino o a nessuna (0,N)*
 	\end{itemize}
 	
 \end{itemize}
 
 \begin{verse}
-	*\emph{(0,N) perchè una tipologia di tappo può essere appena stato acquistato e quindi non è stato ancora assegnato a nessuna bottiglia di vino.}
+	*\emph{(0,N) perchè una tipologia di tappo può essere appena stata acquistata e quindi non ancora assegnata a nessuna bottiglia di vino.}
 \end{verse}
 
 \begin{itemize}
 	\item \underline{BottigliaDiVino - Bottiglia}: \textbf{TipoBottiglia}
 	
 	\begin{itemize}
-		\item La bottiglia di vino è formata da una sola tipologia di bottiglia (1,1)
-		\item Un tipo di bottiglia può appartenere a nessuna o più bottiglie di vino (0,N)*
+		\item Una bottiglia di vino è formata da una sola bottiglia (1,1)
+		\item Un tipo di bottiglia può appartenere a più bottiglie di vino o a nessuna (0,N)*
 	\end{itemize}
 	
 \end{itemize}
 
 \begin{verse}
-	*\emph{(0,N) perchè una tipologia di bottiglia può essere appena stata acquistata e quindi non è stata ancora asseganta a nessuna bottiglia di vino.}
+	*\emph{(0,N) perchè una tipologia di bottiglia può essere appena stata acquistata e quindi non ancora assegnata a nessuna bottiglia di vino.}
 \end{verse}
 
 \begin{itemize}
@@ -105,7 +95,7 @@
 	
 	\begin{itemize}
 		\item Una tipologia di bottiglia di vino è conservata in un unico magazzino (1,1)
-		\item Un magazzino contiene da uno a molteplici tipologie di vino, visto che sono divise per colore e non per annata (1,N)
+		\item Un magazzino contiene da una a molteplici tipologie di vino, poiche' la loro divisione avviene per colore e non per annata (1,N)
 	\end{itemize}
 	
 \end{itemize}
@@ -114,14 +104,14 @@
 	\item \underline{BottigliaDiVino - Ordine}: \textbf{Dettaglio}*
 	
 	\begin{itemize}
-		\item Un tipo di bottiglia di vino può appartenere a nessuno o pù ordini di vendita (0,N)
-		\item Un ordine di vendita contiene da uno a più tipi di bottiglie di vino (1,N)
+		\item Un tipo di bottiglia di vino può appartenere a zero o più ordini di vendita (0,N)
+		\item Un ordine di vendita contiene uno o più tipi di bottiglie di vino acquistate (1,N)
 	\end{itemize}
 	
 \end{itemize}
 
 \begin{verse}
-	*\emph{Nella relazione è presente l'attributo \textbf{QuantitàBottiglie} perchè serve sapere il numero di bottiglie di vino per tipologia vendute nell'ordine}
+	*\emph{Nella relazione è presente l'attributo \textbf{QuantitàBottiglie} poiche' serve sapere il numero di bottiglie di vino per tipologia richieste dall'ordine}
 \end{verse}
 
 \begin{itemize}
@@ -129,7 +119,7 @@
 	
 	\begin{itemize}
 		\item Un ordine viene spedito da un singolo corriere (1,1)
-		\item Un corriere può spedire da uno a molteplici ordini (1,N)
+		\item Un corriere può spedire uno o piu' ordini (1,N)
 	\end{itemize}
 	
 \end{itemize}
@@ -142,43 +132,28 @@
 	\item \underline{Ordine - Acquirente}: \textbf{Venduta}
 	
 	\begin{itemize}
-		\item Un ordine viene venduto ad un singolo acquirente (1,1)
-		\item Un acquirente può effettuare da uno a più ordini (1,N)
+		\item Un ordine e' effettuato da un singolo acquirente (1,1)
+		\item Un acquirente può effettuare uno o più ordini (1,N)
 	\end{itemize}
 	
 \end{itemize}
 
 \begin{itemize}
-	\item \underline{NegozioInterno - Partecipante - Evento}: \textbf{Ospita}*
+	\item \underline{NegozioInterno - Evento}: \textbf{Ospita}*
 	
 	\begin{itemize}
 		\item Un negozio interno può ospitare o nessuno o molteplici eventi (0,N)
-		\item Un partecipante può partecipare ad un solo evento in un solo negozio(1,1)*
-		\item Un evento può essere ospitato in uno o in molteplici negozi(1,N)
+		\item Un evento può essere ospitato in uno o in molteplici negozi (1,N)
 	\end{itemize}
 	
 \end{itemize}
-
-\begin{verse}
-	*\emph{Nella relazione è presente l'attributo \textbf{Data} perchè un evento può essere ospitato in un negozio, in una sola data. Per questo motivo il partecipante assiste ad un solo evento in una determinata data}
-\end{verse}
 
 \begin{itemize}
 	\item \underline{Evento - Vino}: \textbf{TemaVino}
 	
 	\begin{itemize}
-		\item Un evento può avere da uno a molteplici tipo di vino come tema (1,N)
-		\item Un vino può essere essere il tema di nessuno o molteplici eventi(0,N)
-	\end{itemize}
-	
-\end{itemize}
-
-\begin{itemize}
-	\item \underline{ProduzioneVino - Vino}: \textbf{Nasce}
-	
-	\begin{itemize}
-		\item Delle determinate fasi fanno nascere un tipo particolare di vino (1,1)
-		\item Un vino può nascere da una sola e specifica catena di produzione(1,1)
+		\item Un evento può avere uno o molteplici vini come tema (1,N)
+		\item Un vino può essere essere il tema di nessuno o molteplici eventi (0,N)
 	\end{itemize}
 	
 \end{itemize}
@@ -187,7 +162,7 @@
 	\item \underline{LineaProduttiva - Dipendente}: \textbf{Turno}*
 	
 	\begin{itemize}
-		\item In una linea produttiva possono lavorare da uno a molteplici dipendenti (1,N)
+		\item In una linea produttiva possono lavorare uno o molteplici dipendenti (1,N)
 		\item Un dipendete può lavorare in una sola linea produttiva (1,1)
 	\end{itemize}
 	
@@ -202,7 +177,7 @@
 	
 	\begin{itemize}
 		\item Una linea produttiva è diretta da un solo dipendente (1,1)
-		\item Un dipendete può dirigere o nessuna o più linee produttive (0,N)
+		\item Un dipendete può dirigere più linee produttive o nessuna (0,N)
 	\end{itemize}
 	
 \end{itemize}
@@ -212,7 +187,7 @@
 	
 	\begin{itemize}
 		\item Un dipendente può essere riferito da uno o nessun altro dipendente (0,1)
-		\item Un dipendente può riferire o nessuno o molteplici dipendenti (0,N)
+		\item Un dipendente può riferire molteplici dipendenti o nessuno (0,N)
 	\end{itemize}
 	
 \end{itemize}
@@ -221,8 +196,8 @@
 	\item \underline{LineaProduttiva - Macchinario}: \textbf{Utilizzo}
 	
 	\begin{itemize}
-		\item In una linea produttiva possono esserci da uno a molteplici macchinari (1,N)
-		\item Un macchinario può appartenere ad una singola linea produttiva (1,1)
+		\item In una linea produttiva possono essere utilizzati molteplici macchinari oppure nessuno (0,N)
+		\item Un macchinario può appartenere solamente ad una linea produttiva (1,1)
 	\end{itemize}
 	
 \end{itemize}
@@ -231,7 +206,7 @@
 	\item \underline{Macchinario - AziendaManutenzione}: \textbf{Manutenzione}*
 	
 	\begin{itemize}
-		\item Un macchinario può ricevere o nessuna o molteplici manutenzioni (0,N)
+		\item Un macchinario può aver ricevuto molteplici manutenzioni o nessuna (0,N)
 		\item Un'azienda di manutenzione può revisionare uno o molteplici macchinari (1,N)
 	\end{itemize}
 	
