Added er digram image

--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,7 @@
 %\usepackage[compact]{titlesec}
 \usepackage[margin=0.8in, includefoot]{geometry}
 \usepackage{longtable}
+\usepackage{graphicx}
 
 \newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
 %\titleformat{\chapter}[display]{\bfseries}{}{-30pt}{\Huge}
