--- a/src/progettazioneConcettuale/_main.tex
+++ b/src/progettazioneConcettuale/_main.tex
@@ -2,4 +2,7 @@
     \input{src/progettazioneConcettuale/analisi_entita.tex}
     
 \subsection{Analisi delle relazioni e delle cardinalità}
-	\input{src/progettazioneConcettuale/analisi_relazioni.tex}
+    \input{src/progettazioneConcettuale/analisi_relazioni.tex}
+
+\subsection{Diagramma ER}
+    \input{src/progettazioneConcettuale/diagramma_er.tex}
