Moved and updated Operazioni Tipiche

--- a/src/progettazioneLogica/operazioni_tipiche.tex
+++ b/src/progettazioneLogica/operazioni_tipiche.tex
@@ -3,19 +3,19 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} Operazione & Frequenza \\
 		\midrule
-		Vendita ordine & 50 volte al giorno\\
+		Ricezione nuovo ordine & 50 volte al giorno\\
 		\midrule
-		Acquisto materie prime & 2 volte all'anno\\
+		Acquisto materie prime & 100 volte all'anno\\
 		\midrule
 		Manutenzione macchinari & 200 volte all'anno\\
 		\midrule
 		Organizzazione eventi & 5 volte all'anno\\
 		\midrule
-		Inserimento dipendente & 10 volte all'anno\\
+		Assunzione dipendente & 10 volte all'anno\\
 		\midrule
-		Inserimento turno & 30 volte al giorno\\
+		Inserimento turno & 400 volte al giorno\\
 		\midrule
-		Inserimento acquirente & 1 volta al mese\\
+		Inserimento nuovo acquirente & 40 volte al giorno\\
 		\midrule
 		Resoconto guadagno & 1 volta a settimana\\
 		\bottomrule
