--- a/src/progettazioneLogica/_main.tex
+++ b/src/progettazioneLogica/_main.tex
@@ -1,3 +1,6 @@
+\subsection{Operazioni Tipiche}
+\input{src/progettazioneLogica/operazioni_tipiche.tex}
+
 \subsection{Analisi ridondanze}
 	\input{src/progettazioneLogica/analisi_ridondanze.tex}
 	
