Updated analisi delle ridondanze

--- a/src/progettazioneLogica/analisi_ridondanze.tex
+++ b/src/progettazioneLogica/analisi_ridondanze.tex
@@ -1,4 +1,8 @@
-Lo schema concettuale rappresenta 2 attributi ridondanti, il primo è il \textbf{PrezzoTotale} nell'entità \emph{Ordine}. Infatti quest'attributo è derivabile da \textbf{Prezzo $\times$ QuantitàBottiglie $+$ Prezzo}, dove il primo Prezzo è l'attributo dell'entià \emph{Bottiglia di vino}, il secondo Prezzo è l'attributo della relazione \emph{Spedizione} e QuantitàBottiglie è l'attributo della relazione \emph{Dettaglio}. Da notare che quest'operazione matematica può essere ripetuta molteplici volte in base a quante tipologie diverse di bottiglie vengono acquistate nello stesso ordine. L'operazione coinvolta è la \emph{Stampa resoconto guadagno}, che avviene 1 volta alla settimana. Analizziamo la tavola dei volumi e delle operazioni:
+Lo schema concettuale rappresenta 2 attributi ridondanti, il primo è il \textbf{PrezzoTotale} nell'entità \emph{Ordine}. Infatti questo attributo è derivabile da \textbf{
+	\begin{math}\sum_{n = 1}^{j}  (PrezzoBottiglia_n \times QuantitàBottiglie_n) + PrezzoSpedizione\end{math}
+}, 
+dove $j$ e' il numero di tipologie di bottiglie di vino presenti nell'ordine,
+PrezzoBottiglia e' l'attributo dell'entità \emph{Bottiglia di vino}, PrezzoSpedizione è l'attributo della relazione \emph{Spedizione} e QuantitàBottiglie è l'attributo della relazione \emph{Dettaglio}. L'operazione coinvolta è la \emph{Stampa resoconto guadagno}, che avviene 1 volta alla settimana. Analizziamo la tavola dei volumi e delle operazioni:
 
 \begin{center}
 	\begin{tabular}{P{2cm}P{8cm}P{4cm}}
@@ -63,7 +67,7 @@ Lo schema concettuale rappresenta 2 attributi ridondanti, il primo è il \textbf
 \end{center}
 
 \begin{flushleft}
-In quest'esempio vediamo che nello schema \emph{con ridondanza} in \emph{Ordine} avviene 1 accesso e 350 letture a settimana alla tabella \emph{Ordine} per stampare il resoconto settimanale (semplice somma di tutti i prezzi totali degli ordini di una specifica settimana).\\
+In questo esempio vediamo che nello schema \emph{con ridondanza} viene effettuato 1 accesso e 350 letture a settimana alla tabella \emph{Ordine} per stampare il resoconto settimanale (semplice somma di tutti i prezzi totali degli ordini di una specifica settimana).\\
 \vspace{0.5cm}
 Nello schema \emph{senza ridondanza}, invece, per ogni ordine bisognerà accedere alle relativa tabelle:
 \begin{itemize}
@@ -71,7 +75,7 @@ Nello schema \emph{senza ridondanza}, invece, per ogni ordine bisognerà acceder
 	\item \emph{Spedizione} per conoscere il prezzo della spedizione;
 	\item \emph{Dettaglio} per conoscere il prezzo totale delle bottiglie acquistate.
 \end{itemize}
-Si avranno (350 $\times$ 3) $\times$ 350 dove (350 $\times$ 3) sono gli accessi totali alle tre tabelle citate prime e 350 sono le letture della tabella \emph{Ordini}. In totale si avranno 367500 letture.\\
+Si avranno $(350\times3)\times350$, dove $(350\times3)$ sono gli accessi totali alle tre tabelle citate prima e 350 sono le letture della tabella \emph{Ordini}. In totale si avranno $367500$ letture.\\
 \vspace{0.5cm}
 In conclusione, dopo quest'analisi, si è deciso di mantenere l'attributo \textbf{Prezzo totale} in \emph{Ordine}.
 \end{flushleft}
