--- a/src/progettazioneLogica/accorpamento_entita.tex
+++ b/src/progettazioneLogica/accorpamento_entita.tex
@@ -1,12 +1,12 @@
 \textbf{\large{Informazione}}\\
-Si è deciso di aggiungere l'entità \emph{Informazione} perchè sembrava la scelta più consona raggruppare le informazioni comuni dell'entità \emph{Privato ed Azienda}. L'entità \emph{Informazione} avrà quindi gli attributi \textbf{ID (VARCHAR), Email (VARCHAR), Telefono (VARCHAR), Nome (VARCHAR)}.
+Si è deciso di aggiungere l'entità \emph{Informazione} in modo da raggruppare le (numerose) informazioni comuni delle entità \emph{Privato} ed \emph{Azienda} . L'entità \emph{Informazione} contiene quindi gli attributi \textbf{ID (VARCHAR), Email (VARCHAR), Telefono (VARCHAR), Nome (VARCHAR)}, i quali vengono rimossi dalle sopracitate entita'.
 
 \begin{flushleft}
 \textbf{\large{Indirizzo}}\\
-Si è deciso di aggiungere l'entità \emph{Indirizzo} perchè sembrava la scelta più consona raggruppare le informazioni dell'attributo \textbf{Indirizzo} di \emph{Informazione e Vigneto}. L'entità \emph{Indirizzo} avrà quindi gli attributi \textbf{ID (VARCHAR), Stato (VARCHAR), Città (VARCHAR), Provincia (VARCHAR), CAP (INTEGER), Via (VARCHAR), NumCivico (INTEGER)}.
+Si è deciso di aggiungere l'entità \emph{Indirizzo} in modo da raggruppare le informazioni dell'attributo \textbf{Indirizzo} di \emph{Informazione} e \emph{Vigneto}. L'entità \emph{Indirizzo} contiene quindi gli attributi \textbf{ID (VARCHAR), Stato (VARCHAR), Città (VARCHAR), Provincia (VARCHAR), CAP (INTEGER), Via (VARCHAR), NumCivico (INTEGER)}, i quali vengono rimossi dalle sopracitate entita'.
 \end{flushleft}
 
 \begin{flushleft}
 \textbf{\large{Date, InizioTurno, FineTurno}}\\
-\textbf{InizioTurno, FineTurno} e qualsiasi \emph{Data} e' stata trasformata in un attributo singolo visto che viene rappresentato con il tipo \textbf{DATE} o \textbf{DATETIME}.
+\textbf{InizioTurno, FineTurno} e piu' generalmente qualsiasi entita' \textbf{\emph{Data}} e' stata trasformata in un attributo singolo e rappresentata attraverso il tipo \textbf{DATE} o \textbf{DATETIME}.
 \end{flushleft}
